--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-web-share": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
